@@ -161,5 +161,5 @@ export(mongo.update.multi)
 export(mongo.update.upsert)
 export(print.mongo.bson)
 export(print.mongo.oid)
-import(RJSONIO)
+import(jsonlite)
 useDynLib(rmongodb)
